Fix (mostly) notifications on no-sidebar layout
This is still somewhat broken on very narrow screens if they have both
comment and message notifications, but that should be pretty uncommon.

--- a/tildes/scss/_layout.scss
+++ b/tildes/scss/_layout.scss
@@ -47,7 +47,7 @@ body {
   }
 
   #site-header .logged-in-user-info {
-    display: block;
+    display: flex;
   }
 }
 
