--- a/tildes/scss/modules/_site-header.scss
+++ b/tildes/scss/modules/_site-header.scss
@@ -2,6 +2,10 @@
 // SPDX-License-Identifier: AGPL-3.0-or-later
 
 #site-header {
+  .logged-in-user-alert {
+    margin-right: 1rem;
+  }
+
   .logged-in-user-info {
     // hidden on small screens
     display: none;
